1999-04-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnothello.c (set_bg_color): Create the grid gc's here, so that
	we get the correct visual.  Fixes the last commit

1999-04-11  Scott D. Heavner  <sdh@po.cwru.edu>

	* Add grid option.

1999-02-13  Ian Peters  <itp@gnu.org>

	* gnothello.[c|h]: Removed GNOTHELLO_VERSION, use VERSION, so now maybe
	the version will actually change sometimes.

1999-02-13  Ian Peters  <itp@gnu.org>

	* properties.c: Changed "Computer" to "Players", "Disabled" to "Human",
	thanks to Tim Gerla for the idea.  Much more logical.

1999-02-06  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* properties.c (show_properties_dialog): Mark "Tile set:" as a
	translatable string.

1999-01-29  Ian Peters  <itp@gnu.org>

	* Changed all user-visible occurences of gnothello to iagno.

1999-01-27  Ian Peters  <itp@gnu.org>

	* othello.c: Added support for optional flip final results
	* properties.c: Added check button for optionally flipping final
	results.

1999-01-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnothello.c: Kill file menu again.

1999-01-27  Ian Peters  <itp@gnu.org>

	* properties.c: New propbox stuff
	* properties.h: New propbox stuff
	* gnothello.c: Changes for new propbox stuff
	* gnothello.h: Added multiple inclusion stuff
	* othello.c: Changes for new propbox stuff
	* othello.h: Added multiple inclusion stuff

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnothello.c: Kill file menu.

1999-01-10  Nat Friedman  <nat@nat.org>

	* gnothello.c: Standardized menus.
	(create_window): Create a GnomeAppBar.
	(gui_message): Use the appbar.

1998-11-29  Justin Maurer  <justin@openprojects.net>

	* gnothello.c: remove right-justification of help menu

1998-11-27  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* gnothello.c: comply with new gnorba API. Warnings.
	* network.c: a couple of warnings (server_move, game_move).

1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
