@@ -1,3 +1,9 @@
+1999-04-18  Scott D. Heavner  <sdh@po.cwru.edu>
+
+	* gnothello.c (set_bg_color): Free old grid gc's before creating.
+
+	* gnothello.c (gui_draw_grid): Remove printf() about drawing grid.
+
 1999-04-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnothello.c (set_bg_color): Create the grid gc's here, so that
